# gestor-akf

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.exemplo.toml
config/: consistem.exemplo.json  parametros.exemplo.json
db/: schema.sql
docs/: IMPLANTACAO.md
scripts/: importar_planilha.py
src/gestor_akf/: __init__.py  auth.py  bordero_ocr.py  calculos.py  carteira.py  conciliacao.py  consistem_api.py  db.py  instrucao.py  modelos.py  numeros.py  parametros.py  passivo.py  selecao.py  util.py
tests/: test_auth.py  test_bordero_ocr.py  test_calculos.py  test_carteira.py  test_conciliacao.py  test_consistem_api.py  test_instrucao.py  test_numeros.py  test_passivo.py  test_selecao.py
